2007-08-22 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 423: moved the include of config.h into internal.h
	* SVN 422: little fixes in the new camera detection API.
        * SVN 421: Reverted some changes concerning where #includes are placed.
	           This was changed for windows compatibility but breaks
		   compilation of programs using the library (on Linux).

2007-08-20 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 420: again, changes on the new camera detection API.

2007-08-16 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 419: more changes on the new camera detection API.
        * SVN 418: first changes on the new camera detection API.
	
2007-08-15 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 417: First alpha implementation of the new API for camera
	           detection. It consists in wrappers around existing
		   functions. An example (test_new_api) is provided to...
		   test this new API.
        * SVN 416: remove topology.c/h and raw1394support.h. This gets rid of
	           GPL files that were tainting the library license. Thanks to
		   Olaf Hering for spoting this. The topology data is now only
		   available on MSW (not in OSX and Linux).
	
2007-08-14 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 415: basler_cff.h needed <string.h>
        * SVN 414: Merged patch from Vladimir Avdonin for the compilation and
	           use of libdc1394 on MS Windows XP.

2007-08-03 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 413: Removed unnecessary function to set the color filter
	           (the latter is read only!). Thanks to Johann Schoonees.

2007-07-20 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 411: Applied AVT patch from Seemant Kulleen
	
2007-07-11 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 410: execute a "SLOW_DOWN" only if the ROM read or write fails,
	           not everytime. This makes much more sense and also makes