@@ -37,7 +37,7 @@ int list_cameras (dc1394camera_t **cameras, uint32_t num_cameras)
     sff_available = DC1394_FALSE;
     dc1394_basler_sff_is_available (cameras[i], &sff_available);
 
-    printf ("%02d:0x%016llx:%s:%s:%s\n", i, cameras[i]->euid_64, cameras[i]->vendor, cameras[i]->model, sff_available ? "SFF" : "NO SFF");
+    printf ("%02d:0x%016llx:%s:%s:%s\n", i, cameras[i]->guid, cameras[i]->vendor, cameras[i]->model, sff_available ? "SFF" : "NO SFF");
   }
   return 0;
 }
@@ -53,7 +53,7 @@ void cleanup (dc1394camera_t** cameras, uint32_t num_cameras)
 
 int print_usage ()
 {
-  printf ("usage: basler_sff_extended_data [--list-cameras|[--euid EUID]]\n");
+  printf ("usage: basler_sff_extended_data [--list-cameras|[--guid GUID]]\n");
   return 1;
 }
 
@@ -63,7 +63,7 @@ int main (int argc, char **argv)
   dc1394camera_t **cameras, *camera = NULL;
   dc1394bool_t sff_available;
   uint32_t num_cameras, i, max_height, max_width;
-  uint64_t euid = 0x0LL, total_bytes;
+  uint64_t guid = 0x0LL, total_bytes;
   uint8_t* buffer; 
   dc1394basler_sff_t chunk;
   dc1394basler_sff_extended_data_stream_t* sff_ext;
@@ -92,8 +92,8 @@ int main (int argc, char **argv)
       return print_usage();
     }  
   } else if (argc == 3) {
-    if (!strcmp (argv[1], "--euid")) {
-      if (sscanf (argv[2], "0x%llx", &euid) == 1) {
+    if (!strcmp (argv[1], "--guid")) {
+      if (sscanf (argv[2], "0x%llx", &guid) == 1) {
       } else {
         cleanup (cameras, num_cameras);
         return print_usage();
@@ -104,7 +104,7 @@ int main (int argc, char **argv)
     return print_usage();
   }
 
-  if (euid == 0x0LL) {
+  if (guid == 0x0LL) {
     printf ("I: found %d camera%s, working with camera 0\n", num_cameras, num_cameras == 1 ? "" : "s");
     camera = cameras[0];
     for (i = 1; i < num_cameras; i ++) {
@@ -113,7 +113,7 @@ int main (int argc, char **argv)
     free (cameras);
   } else {
     for (i = 0; i < num_cameras; i ++) {
-      if (cameras[i]->euid_64 == euid) {
+      if (cameras[i]->guid == guid) {
         camera = cameras[i];
       } else {
         dc1394_free_camera(cameras[i]);
@@ -122,11 +122,11 @@ int main (int argc, char **argv)
     free (cameras);
 
     if (camera == NULL) {
-      fprintf (stderr, "E: no camera with euid 0x%016llx found\n", euid);
+      fprintf (stderr, "E: no camera with guid 0x%016llx found\n", guid);
       return 1;
     }
 
-    printf ("I: found camera with euid 0x%016llx\n", euid);
+    printf ("I: found camera with guid 0x%016llx\n", guid);
   }
 
   /*
